# duckup

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: dev_task.md
.github/workflows/: rust.yml
src/: main.rs
