[package]
name = "duckup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
home = "0.5.9"
os_info = "3.8.2"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
tempfile = "3.10.1"
zip = "1.1.0"

[dev-dependencies]
rstest = "0.18.2"
